# Project_Flack_GB

./: .dockerignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  wait-for-postgres.sh  wsgi.py
blog/: .env  admin.py  app.py  commands.py  db.sqlite  extensions.py  settings.py
blog/api/: article.py  user.py
blog/api/permissions/: user.py
blog/article/: views.py
blog/auth/: views.py
blog/author/: views.py
blog/forms/: article.py  auth.py  user.py
blog/models/: __init__.py  article.py  article_tag.py  author.py  tag.py  user.py
blog/schemas/: article.py  author.py  tag.py  user.py
blog/templates/: base.html  navbar.html
blog/templates/admin/: index.html
blog/templates/articles/: create.html  details.html  list.html
blog/templates/auth/: login.html
blog/templates/authors/: list.html
blog/templates/tags/: details.html
blog/templates/users/: details.html  list.html  register.html
blog/user/: views.py
migrations/versions/: 00caca3dea9d_.py  0c088e515ebf_add_email_field_to_user_model.py  0d13b2227a02_.py  74b7b0545a62_.py  96cb82ccb0b5_.py  a5587261f881_initial_migration.py
